# MCP_SAMPLE

./: README.md  pyproject.toml
server/: .env  client.py  weather.json  weather.py
