[project]
name = "mcp-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastembed>=0.6.1",
    "langchain-groq>=0.3.2",
    "mcp-use>=1.2.8",
    "mcp[cli]>=1.6.0",
    "nest-asyncio>=1.6.0",
]
